--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "buffer": "^5.6.0",
+    "expo-asset-utils": "^1.2.0",
+    "expo-font": "^8.3.0",
+    "expo-gl": "~9.1.1",
+    "expo-three": "5.4.0",
     "gl-react": "^4.0.1",
     "gl-react-native": "^4.0.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "react-native-unimodules": "^0.11.0"
+    "react-native-unimodules": "^0.11.0",
+    "react-three-fiber": "^4.2.8",
+    "three": "^0.117.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
