--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "react-spring": "8.0.27",
     "buffer": "^5.6.0",
     "expo-asset-utils": "^1.2.0",
     "expo-font": "^8.3.0",
