--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react-spring": "8.0.27",
     "buffer": "^5.6.0",
+    "expo-asset": "^8.2.0",
     "expo-asset-utils": "^1.2.0",
     "expo-font": "^8.3.0",
     "expo-gl": "~9.1.1",
@@ -21,6 +21,7 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-unimodules": "^0.11.0",
+    "react-spring": "8.0.27",
     "react-three-fiber": "^4.2.8",
     "three": "^0.117.1"
   },
