--- a/.github/workflows/react-native-android.yml
+++ b/.github/workflows/react-native-android.yml
@@ -12,3 +12,13 @@ jobs:
       run: npx envinfo
     - name: Build application
       run: yarn install && cd android && chmod +x gradlew && ./gradlew assembleRelease
+    #new
+    - name: Create release and upload apk
+      uses: underwindfall/create-release-with-debugapk@v2.0.0
+      env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      with:
+        tag_name: v1.0.0
+        asset_path: app/build/outputs/apk/debug/app-debug.apk
+        asset_name: Example.apk
+        asset_content_type: application/zip
