--- a/.github/workflows/react-native-android.yml
+++ b/.github/workflows/react-native-android.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Create release and upload apk
       uses: underwindfall/create-release-with-debugapk@v2.0.0
       env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACTION_TEST  }}
       with:
         tag_name: v1.0.0
         asset_path: app/build/outputs/apk/debug/app-debug.apk
