--- a/.github/workflows/react-native-android.yml
+++ b/.github/workflows/react-native-android.yml
@@ -18,8 +18,8 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.ACTION_TEST  }}
       with:
-        tag_name: v1.0.0
+        tag_name: v1.0.1
         asset_path: android/app/build/outputs/apk/debug/app-debug.apk
         asset_name: Example.apk
-        asset_content_type: application/zip
+        asset_content_type: application/apk
 
