--- a/.github/workflows/react-native-android.yml
+++ b/.github/workflows/react-native-android.yml
@@ -1,7 +1,13 @@
 name: Github Actions
 
-on: [push, pull_request]
-
+# on: [push, pull_request]
+on:
+  push:
+    branches: [  master  ]
+    tags:
+      - 'v*'
+  pull_request:
+    branches: [  master  ]
 jobs:
   build:
     runs-on: ubuntu-latest
