--- a/.github/workflows/react-native-android.yml
+++ b/.github/workflows/react-native-android.yml
@@ -39,7 +39,7 @@ jobs:
 #         asset_content_type: application/apk
     - name: Create GitHub release
       id: create_release
-      if: steps.version_check.outputs.changed == 'true'
+#       if: steps.version_check.outputs.changed == 'true'
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
