--- a/.github/workflows/react-native-android.yml
+++ b/.github/workflows/react-native-android.yml
@@ -13,6 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 #     container: reactnativecommunity/react-native-android
     steps:
+    - name: "#️⃣ Generate Build Number"
+      id: buildnumber
+      uses: einaregilsson/build-number@v2
+      with:
+        token: ${{ secrets.ACTION_TEST }}
     - name: Print new build number
       run: |
         echo "Build number is $BUILD_NUMBER"
@@ -25,11 +30,11 @@ jobs:
 #     - name: Build application
 #       run: yarn install && cd android && chmod +x gradlew && ./gradlew assembleRelease
     #new
-    - name: "#️⃣ Generate Build Number"
-      id: buildnumber
-      uses: einaregilsson/build-number@v2
-      with:
-        token: ${{ secrets.ACTION_TEST }}
+#     - name: "#️⃣ Generate Build Number"
+#       id: setbuildnumber
+#       uses: einaregilsson/build-number@v2
+#       with:
+#         token: ${{ secrets.ACTION_TEST }}
     - name: Print new build number
       run: |
         echo "Build number is $BUILD_NUMBER"
