--- a/.github/workflows/react-native-android.yml
+++ b/.github/workflows/react-native-android.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Print new build number
       run: |
         echo "Build number is $BUILD_NUMBER"
-        echo "Build number is $buildnumber" ${{ steps.buildnumber.outputs }}
+        echo "Build number is $buildnumber" ${{ steps.buildnumber.outputs.build_number }}
         echo  $BUILD_NUMBER
 
 #     - uses: actions/checkout@v2
@@ -57,16 +57,16 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: $BUILD_NUMBER
-        release_name: $BUILD_NUMBER
+        tag_name: V-${{ steps.buildnumber.outputs.build_number }}
+        release_name: V-${{ steps.buildnumber.outputs.build_number }}
         body: |
           ![release!](https://i.giphy.com/media/lPulaaB9lDMnGZiivs/source.gif)
           # Changelog
-          Release type: ${{ steps.buildnumber.outputs }}
+          Release type: ${{ steps.buildnumber.outputs.build_number }}
         prerelease: true
 
     - name: Upload APKs to release assets
-      if: steps.version_check.outputs.changed == 'true'
+#       if: steps.version_check.outputs.changed == 'true'
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
