--- a/.github/workflows/react-native-android.yml
+++ b/.github/workflows/react-native-android.yml
@@ -62,43 +62,43 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./app/build/outputs/apk/debug/app-debug.apk
         asset_name: app-debug.apk
-        asset_content_type: application/vnd.android.package-archive
-    - name: Upload APKs to release assets
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:  
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./android/app/build/outputs/apk/debug/app-debug.apk
-        asset_name: app-debug.apk
-        asset_content_type: application/vnd.android.package-archive
-    - name: Upload APKs to release assets
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:  
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: /android/app/build/outputs/apk/debug/app-debug.apk
-        asset_name: app-debug.apk
-        asset_content_type: application/vnd.android.package-archive
-    - name: Upload APKs to release assets
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:  
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: android/app/build/outputs/apk/debug/app-debug.apk
-        asset_name: app-debug.apk
-        asset_content_type: application/vnd.android.package-archive
-    - name: Upload APKs to release assets
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:  
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: app/build/outputs/apk/release/app-release.apk 
-        asset_name: app-release.apk 
-        asset_content_type: application/vnd.android.package-archive        
+        asset_content_type: application/apk
+#     - name: Upload APKs to release assets
+#       uses: actions/upload-release-asset@v1
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:  
+#         upload_url: ${{ steps.create_release.outputs.upload_url }}
+#         asset_path: ./android/app/build/outputs/apk/debug/app-debug.apk
+#         asset_name: app-debug.apk
+#         asset_content_type: application/vnd.android.package-archive
+#     - name: Upload APKs to release assets
+#       uses: actions/upload-release-asset@v1
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:  
+#         upload_url: ${{ steps.create_release.outputs.upload_url }}
+#         asset_path: /android/app/build/outputs/apk/debug/app-debug.apk
+#         asset_name: app-debug.apk
+#         asset_content_type: application/vnd.android.package-archive
+#     - name: Upload APKs to release assets
+#       uses: actions/upload-release-asset@v1
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:  
+#         upload_url: ${{ steps.create_release.outputs.upload_url }}
+#         asset_path: android/app/build/outputs/apk/debug/app-debug.apk
+#         asset_name: app-debug.apk
+#         asset_content_type: application/vnd.android.package-archive
+#     - name: Upload APKs to release assets
+#       uses: actions/upload-release-asset@v1
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:  
+#         upload_url: ${{ steps.create_release.outputs.upload_url }}
+#         asset_path: app/build/outputs/apk/release/app-release.apk 
+#         asset_name: app-release.apk 
+#         asset_content_type: application/vnd.android.package-archive        
         
         
         
