add versionCode set in cli

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,7 +120,17 @@ def jscFlavor = 'org.webkit:android-jsc:+'
  * and the benefits of using Hermes will therefore be sharply reduced.
  */
 def enableHermes = project.ext.react.get("enableHermes", false);
+def getMyVersionCode = { ->
+    def code = project.hasProperty('versionCode') ? versionCode.toInteger() : -1
+    println "VersionCode is set to $code"
+    return code
+}
 
+def getMyVersionName = { ->
+    def name = project.hasProperty('versionName') ? versionName : "1.0"
+    println "VersionName is set to $name"
+    return name
+}
 android {
     compileSdkVersion 29
 
@@ -133,8 +143,22 @@ android {
         applicationId "com.rn3d"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode getMyVersionCode()
+        versionName getMyVersionName()
+        // versionName = "${versionName != 'unspecified' ? versionName : '1.0'}"
+        // versionCode = "${versionCode != 'unspecified' ? versionCode : 1}"
+        // versionCode 1
+        // versionName "1.0"
+        // if (project.hasProperty('projVersion')) {
+        //     project.versionCode = project.projVersion
+        // } else {
+        //     project.version = '10.0.0'
+        // }
+        //   if (project.hasProperty('projVersion')) {
+        //     project.version = project.projVersion
+        // } else {
+        //     project.version = '10.0.0'
+        // }
     }
     splits {
         abi {
