--- a/.github/workflows/react-native-android.yml
+++ b/.github/workflows/react-native-android.yml
@@ -29,11 +29,11 @@ jobs:
     - name: Build application
       run: yarn install && cd android && chmod +x gradlew && ./gradlew assembleRelease
     #new
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: app-debug.apk
-        path: android/app/build/outputs/apk/debug/  
+#     - name: Upload Artifact
+#       uses: actions/upload-artifact@v1
+#       with:
+#         name: app-debug.apk
+#         path: android/app/build/outputs/apk/debug/  
     - name: Upload Artifact
       uses: actions/upload-artifact@v1
       with:
