--- a/.github/workflows/react-native-android.yml
+++ b/.github/workflows/react-native-android.yml
@@ -38,7 +38,7 @@ jobs:
         echo ::set-output name=apk_path::$APK_PATH
         APK_NAME=`basename $APK_PATH`
         echo ::set-output name=apk_name::$APK_NAME
-
+#        選用
 #        BUNDLE_PATH=`find . -name '*.aab' | grep release | grep -v intermediates`
 #        echo ::set-output name=bundle_path::$BUNDLE_PATH
 #        BUNDLE_NAME=`basename $BUNDLE_PATH`
@@ -71,7 +71,7 @@ jobs:
 
 
     - name: Upload APK Asset
-#       if: steps.create_release.outputs.upload_url && steps.prepare_release.outputs.apk_path && steps.prepare_release.outputs.apk_name
+      if: steps.create_release.outputs.upload_url && steps.prepare_release.outputs.apk_path && steps.prepare_release.outputs.apk_name
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
@@ -80,6 +80,7 @@ jobs:
         asset_path: ${{steps.prepare_release.outputs.apk_path}}
         asset_name: ${{steps.prepare_release.outputs.apk_name}}
         asset_content_type: application/vnd.android.package-archive
+#       選用 ＢＢＡ
 #     - name: Upload Bundle Asset
 #       if: steps.create_release.outputs.upload_url && steps.prepare_release.outputs.bundle_path && steps.prepare_release.outputs.bundle_name
 #       uses: actions/upload-release-asset@v1
@@ -92,17 +93,6 @@ jobs:
 #         asset_content_type: application/octet-stream
         
 
-#     - name: Upload APKs to release assets
-#       uses: actions/upload-release-asset@v1
-#       env:
-#         GITHUB_TOKEN: ${{ secrets.ACTION_TEST }}
-#       with:  
-#         upload_url: ${{ steps.create_release.outputs.upload_url }}
-#         asset_path: android/app/build/outputs/apk/debug/app-debug.apk
-#         asset_name: app-debug.apk
-#         asset_content_type: application/apk
 
-        
-        
         
        
