--- a/.github/workflows/react-native-android.yml
+++ b/.github/workflows/react-native-android.yml
@@ -27,7 +27,8 @@ jobs:
     - name: Envinfo
       run: npx envinfo
     - name: Build application
-      run: yarn install && cd android && chmod +x gradlew && ./gradlew assembleRelease
+      run: yarn install && cd android && chmod +x gradlew && ./gradlew build bundleRelease du -shc `find . -regex '.+\.\(apk\|aab\)$'`
+#      run: yarn install && cd android && chmod +x gradlew && ./gradlew assembleRelease
       
       
 #       ./gradlew build bundleRelease
