--- a/.github/workflows/react-native-android-Release-Store.yml
+++ b/.github/workflows/react-native-android-Release-Store.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [  Release-Store  ]
     tags:
-      - 'v*'
+      - 'Store*'
   pull_request:
     branches: [  Release-Store  ]
 jobs:
@@ -63,6 +63,22 @@ jobs:
 #        echo ::set-output name=tag_name::$TAG_NAME
 #        PACKAGE_NAME=`./tools/aapt2 dump packagename $APK_PATH`
 #        echo ::set-output name=package_name::$PACKAGE_NAME
+    - name: Print build PATH
+      run: |
+        echo ${{steps.prepare_release.outputs.bundle_path}}
+        echo ${{steps.prepare_release.outputs.apk_name}}
+        echo ${{steps.prepare_release.outputs.bundle_path}}/${{steps.prepare_release.outputs.apk_name}}
+#       簽署 ＢＢＡ
+    - name: Sign AAB
+      id: sign
+      uses: r0adkll/sign-android-release@v1
+      with:
+        releaseDirectory: ${{steps.prepare_release.outputs.bundle_path}}
+        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+        alias: ${{ secrets.ALIAS }}
+        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
+
     #Uploads
     - name: Upload Artifact
       if: steps.prepare_release.outputs.apk_path
@@ -115,5 +131,12 @@ jobs:
         asset_path: ${{steps.prepare_release.outputs.bundle_path}}
         asset_name: ${{steps.prepare_release.outputs.bundle_name}}
         asset_content_type: application/octet-stream
-        
-
+#       上傳 ＢＢＡ
+    - name: Upload Android Release to Play Store (internal track publishing is default)
+      uses: r0adkll/upload-google-play@v1
+      with:
+        serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+        packageName: dev.dayuan.rn3d
+        releaseFile: ${{steps.prepare_release.outputs.bundle_path}}/${{steps.prepare_release.outputs.apk_name}}
+        track: internal
+        whatsNewDirectory: distribution/whatsnew
