--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -27,5 +27,5 @@ android.enableJetifier=true
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
 
-versionCode=2
-versionName="2.0.2"
+#versionCode=2
+#versionName=2.0.2
