--- a/.github/workflows/react-native-android-Release-Store.yml
+++ b/.github/workflows/react-native-android-Release-Store.yml
@@ -3,14 +3,14 @@ name: Github Actions
 # on: [push, pull_request]
 on:
   push:
-    branches: [  master  ]
-#     branches: [  Release-Store  ]
+#     branches: [  master  ]
+    branches: [  Release-Store  ]
 
     tags:
       - 'Store*'
   pull_request:
-    branches: [  master  ]
-#     branches: [  Release-Store  ]
+#     branches: [  master  ]
+    branches: [  Release-Store  ]
 jobs:
   build:
     runs-on: ubuntu-latest
