--- a/.github/workflows/react-native-android-Release-Store.yml
+++ b/.github/workflows/react-native-android-Release-Store.yml
@@ -3,13 +3,10 @@ name: Github Actions
 # on: [push, pull_request]
 on:
   push:
-#     branches: [  master  ]
     branches: [  Release-Store  ]
-
     tags:
       - 'Store*'
   pull_request:
-#     branches: [  master  ]
     branches: [  Release-Store  ]
 jobs:
   build:
@@ -36,12 +33,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Envinfo
       run: npx envinfo
-      
     - name: Build application
       run: |
-        echo "versionCode=2" >> gradle.properties
-        echo "versionName=0.0.2" >> gradle.properties
-        yarn install && cd android && chmod +x gradlew && ./gradlew build bundleRelease -PversionCode=$BUILD_NUMBER -PversionName=${{ steps.buildnumber.outputs.build_number }}
+        yarn install && cd android && chmod +x gradlew && ./gradlew build bundleRelease 
         du -shc `find . -regex '.+\.\(apk\|aab\)$'`
 #      run: yarn install && cd android && chmod +x gradlew && ./gradlew assembleRelease
       
@@ -71,9 +65,9 @@ jobs:
 #        echo ::set-output name=package_name::$PACKAGE_NAME
     - name: Print build PATH
       run: |
-         echo ${{steps.prepare_release.outputs.bundle_path}}
-#        echo ${{steps.prepare_release.outputs.apk_path}}
-#        echo ${{steps.prepare_release.outputs.bundle_path}}/${{steps.prepare_release.outputs.apk_name}}
+        echo ${{steps.prepare_release.outputs.bundle_path}}
+        echo ${{steps.prepare_release.outputs.apk_name}}
+        echo ${{steps.prepare_release.outputs.bundle_path}}/${{steps.prepare_release.outputs.apk_name}}
 #       簽署 ＢＢＡ
     - name: Sign AAB
       id: sign
@@ -138,17 +132,11 @@ jobs:
         asset_name: ${{steps.prepare_release.outputs.bundle_name}}
         asset_content_type: application/octet-stream
 #       上傳 ＢＢＡ
-
-    - name: Print Upload Android Release
-      run: |
-        echo ls app/build/outputs/bundle/release/
-        echo  app/build/outputs/bundle/release/
-        
     - name: Upload Android Release to Play Store (internal track publishing is default)
       uses: r0adkll/upload-google-play@v1
       with:
         serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
         packageName: dev.dayuan.rn3d
-        releaseFile: ./android/app/build/outputs/bundle/release/app-release.aab
+        releaseFile: ${{steps.prepare_release.outputs.bundle_path}}
         track: internal
         whatsNewDirectory: distribution/whatsnew
