CI set versionCode

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,6 +26,7 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
-
-versionCode=7
-versionName=0.0.7
+# versionCode=7
+# versionName=0.0.7
+versionCode=${{ steps.buildnumber.outputs.buildnumber_store }}
+versionName=${{ steps.buildnumber.outputs.build_number }}
