--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -29,6 +29,16 @@ jobs:
         issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
         api-key-id: ${{ secrets.APPSTORE_KEY_ID }}
         api-private-key: ${{ secrets.APPSTORE_PRIVATE_KEY }}
+
+    - name: Install dependencies
+      run: |    
+        npm install -g react-native-cli
+        yarn
+
+    - name: Install IOS dependencies
+      run: |    
+        cd ios
+        pod install
    
     - name: Build app (fix)
       run: |
